<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailsActivity">

    <TextView
        android:id="@+id/update_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="Title"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_back" />

    <EditText
        android:id="@+id/update_repeat"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/add_repeat"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_end_time" />

    <EditText
        android:id="@+id/update_add_to_list"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/add_to_list"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_description" />

    <EditText
        android:id="@+id/update_end_time"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/add_end_time"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_start_time" />

    <EditText
        android:id="@+id/update_start_time"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/add_start_time"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_date" />

    <EditText
        android:id="@+id/update_date"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/add_date"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_title" />

    <EditText
        android:id="@+id/update_title"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="29dp"
        android:backgroundTint="@color/purple_700"
        android:ems="10"
        android:hint="@string/add_location"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_task" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="105dp"
        android:layout_height="52dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="153dp"
        android:backgroundTint="#2100DC"
        android:text="@string/btn_update"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_add_to_list" />

    <EditText
        android:id="@+id/update_description"
        android:layout_width="354dp"
        android:layout_height="125dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/purple_700"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_description"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_repeat" />

    <CheckBox
        android:id="@+id/update_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/important"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_add_to_list" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="43dp"
        android:layout_height="31dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/update_task"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>