<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskMenuActivity">

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/purple"
        android:onClick="openAddTask"
        android:text="@string/btn_add_task"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks" />

    <Button
        android:id="@+id/btn_my_day"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/purple"
        android:onClick="openMyDay"
        android:text="@string/btn_my_day"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_task" />

    <Button
        android:id="@+id/btn_important"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/purple"
        android:onClick="openImportantTasks"
        android:text="@string/btn_important"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_my_day" />

    <Button
        android:id="@+id/btn_planned"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/purple"
        android:onClick="openPlanned"
        android:text="@string/btn_planned"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_important" />

    <Button
        android:id="@+id/bnt_lists"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/purple"
        android:text="@string/bnt_lists"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_planned" />

    <TextView
        android:id="@+id/tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="-23dp"
        android:layout_marginEnd="175dp"
        android:text="@string/tasks"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="39dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_back" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="159dp"
        android:layout_height="87dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

</androidx.constraintlayout.widget.ConstraintLayout>